kaf022: fix again style

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
@@ -1,6 +1,7 @@
-/ Override Base /
+/* Override Base */
 .ui-widget.ui-tabs.vertical > .ui-tabs-panel {
-    overflow: visible;
+    overflow: visible !important;
+    width: auto;
 }
 td div {
 	position: relative;
