--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/kmk011.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/a/kmk011.a.main.css
@@ -1,70 +1,56 @@
 @CHARSET "UTF-8";
-#left-content {
-	margin-left: 30px;
+
+.master_setting {
+	width: 250px;
+    height: 225px;
+	border-style: solid;
+	border-color: #cccccc;
+	border-width: 1px;
+	border-radius: 6%;
+	margin-left: 35px;
+	margin-top: 40px;
+}
+
+.master_title_left {
 	margin-top: 20px;
-	padding: 25px;
-	float: left;
-	max-height: 300px;
+	margin-left: 20px;
+	margin-bottom: 10px;
+	width: 190px;
+	height: 80px;
+	background-color: #f2f2f2;
+	border-radius: 5px;
 }
 
-#right-content {
-	margin-left: 40px;
-	float: left;
+.master_title_right {
 	margin-top: 20px;
+	margin-left: 15px;
+	margin-bottom: 10px;
+	width: 275px;
+	height: 80px;
+	background-color: #f2f2f2;
+	border-radius: 5px;
 }
 
-.ntsRadioBox {
-	width: 100%;
-	margin-top: 10px;
-}
-
-#inp_002 {
-	width: 100px;
-	float: left;
-}
-
-#inp_006 {
-	float: left;
-}
-
-#inp_003 {
-	float: center;
-	margin-left: 30px;
-}
-
-.inp_004 {
-	padding-bottom: 20px;
+.label_master {
+	font-size: 20pt;
 	padding-top: 20px;
+	padding-left: 20px;
+	display: block;
 }
 
-.lst_003 {
-	margin-top: 10px;
-	display: inline-block;
-	height: 190px;
-	overflow-y: scroll;
+.label_tips {
+	font-size: 9pt;
+	margin-top: 5px;
+	margin-left: 20px;
 }
 
-.line {
-	display: inline-block;
+.btnconfig {
+	margin-top: 15px;
+	margin-left: 20px;
 }
 
-.left-line {
-	width: 120px;
-}
-
-.row {
-	height: 50px;
-}
-
-#single-list-dataSource tr td {
-	white-space: nowrap;
-}
-#div-time-name{
-	width: 150px !important;
-}
-#content-area{
-	width: 1260px;
-}
-#inpDialog{
-	margin-left: 30px;
+.master_setting_caret.caret-right:after {
+	color: #97D155;
+	border-width: 51px 26px;
+	margin-top: 95px;
 }
