update flip datepicker

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_datepicker.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_datepicker.scss
@@ -239,6 +239,16 @@ $brand-color: #39f;
   }
 }
 
+.small-style {
+	> .datepicker-panel  {
+		> ul { 
+			> li {
+  				line-height: 22px !important;
+  				height: 22px !important;
+			}
+		}
+	} 
+}
 
 // Panels
 // -----------------------------------------------------------------------------
