--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/k/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/k/index.xhtml
@@ -41,7 +41,7 @@
 							data-bind="ntsGridList: {
 								height: 300,
 								width: 280,
-								name: '#[CMF001_376]', 
+								name:'#{i18n.getText('CMF001_376')}',
 								dataSource: listConvertCode,
 								primaryKey: 'dispConvertCode',
 									columns: [
