--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/e/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/e/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 350, height: 620 };</script>
+			<script>var dialogSize = { width: 380, height: 620 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="../share/model.js" />
 			<com:scriptfile path="cmf001.e.vm.js" />
@@ -16,11 +16,11 @@
 		</ui:define>
 
 		<ui:define name="content">
-			<div class="contents-area dialog-content" >
+			<div class="contents-area dialog-content"  >
 				<div id ="E1_1" class = "label dialog-title" >#{i18n.getText('CMF001_180')}</div>
-				<div style=" margin-top:15px; width = 350px;">
+				<div  style=" margin-top:15px; ">
 					<div id ="E1_2"  data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_181')}</div>
-					<div id ="E1_3" tabindex = "1"  style=" display:inline-block; width: 150px" 
+					<div id ="E1_3" tabindex = "1"  style=" display:inline-block; width: 180px" 
 					data-bind="ntsSearchBox: {
 						searchMode: 'highlight', 
 						targetKey: 'dispCsvItemNumber', comId: 'E2_1', 
@@ -32,12 +32,10 @@
 						mode: 'igGrid'}" 
 						/>		
 				
-				</div>
-				<div style="margin-right:auto" >
+				
 					<table id="E2_1"  data-bind="ntsGridList: {
-							height: 420,
-							width: 270,
-							name: '#[CMF001_182]', 
+							width: 300,
+							name:'#{i18n.getText('CMF001_182')}',
 							dataSource: listCsvItem,
 							primaryKey: 'dispCsvItemNumber',
 								columns: [
@@ -45,16 +43,16 @@
 				                { headerText: '#{i18n.getText('CMF001_183')}', key: 'dispCsvItemName', width: 180, formatter: _.escape }
 				            ],
 				            rows: 15,
-				            showNumbering: false,
+				            showNumbering: true,
 							multiple: false,
 							value: selectedCsvItemNumber
 						}">
 					</table>
 				</div>
-				<div id="functions-area-bottom">
-					<button tabindex = "2" id="E3_1" class="x-large proceed " data-bind="click: save">#{i18n.getText('CMF001_184')}</button>
-					<button tabindex = "3" id="E3_2" class="large" data-bind="click: cancel">#{i18n.getText('CMF001_185')}</button>
-				</div>
+			</div>
+			<div id="functions-area-bottom">
+				<button tabindex = "2" id="E3_1" class="x-large proceed " data-bind="click: save">#{i18n.getText('CMF001_184')}</button>
+				<button tabindex = "3" id="E3_2" class="large" data-bind="click: cancel">#{i18n.getText('CMF001_185')}</button>
 			</div>
 		</ui:define>
 	</ui:composition>
