--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
@@ -25,14 +25,33 @@
 							data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_266')}</div>
 						<div id="H2_2" tabindex="1" class="div-table-col">
 							<div id="H2_3" tabindex="-1" class="div-table-col"
-								data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[0], name: '#[CMF001_267]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls'}"></div>
+								data-bind="ntsRadioButton: {
+									checked: effectiveDigitLength, 
+									option: $parent.effectDigitItem()[0], 
+									name:'#{i18n.getText('CMF001_267')}',
+									optionValue: 'code', 
+									enable: $parent.inputMode, 
+									optionText: 'name', 
+									group: 'effectDigitCls'
+								}">
+							</div>
 							<div id="H2_4" tabindex="-1" class="div-table-col radio-group"
-								data-bind="ntsRadioButton: {checked: effectiveDigitLength, option: $parent.effectDigitItem()[1], name: '#[CMF001_267]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'effectDigitCls' }"></div>
+								data-bind="ntsRadioButton: {
+									checked: effectiveDigitLength, 
+									option: $parent.effectDigitItem()[1], 
+									name:'#{i18n.getText('CMF001_267')}',
+									optionValue: 'code', 
+									enable: $parent.inputMode, 
+									optionText: 'name', 
+									group: 'effectDigitCls' 
+								}">
+							</div>
 						</div>
 						<div class="div-table-col">
 							<input id="H2_5" tabindex="2"
 								data-bind="ntsTextEditor: {
 								value: startDigit,
+								name:'#{i18n.getText('CMF001_270')}',
 								option : {width : '30px'},
 								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div id="H2_6" class="label" style="display: inline">#{i18n.getText('CMF001_270')}</div>
@@ -41,9 +60,10 @@
 							<input id="H2_7" tabindex="3"
 								data-bind="ntsTextEditor: {
 								value: endDigit,
+								name:'#{i18n.getText('CMF001_273')}',
 								option : {width : '30px'},
 								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
-							<div id="H2_8" class=" label" style="display: inline">#{i18n.getText('CMF001_273')}</div>
+							<div id="H2_8" class=" label" style="display: inline">#{i18n.getText('CMF001_274')}</div>
 						</div>
 					</div>
 					<div class="div-table-row">
@@ -51,14 +71,33 @@
 							data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_275')}</div>
 						<div id="H3_2" tabindex="4" class="div-table-col">
 							<div id="H3_3" tabindex="-1" class="div-table-col"
-								data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[0], name: '#[CMF001_276]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls'}"></div>
+								data-bind="ntsRadioButton: {
+									checked: codeEditing, 
+									option: $parent.codeEditingItem()[0], 
+									name:'#{i18n.getText('CMF001_276')}',
+									optionValue: 'code', 
+									enable: $parent.inputMode, 
+									optionText: 'name', 
+									group: 'fixedLengCls'
+								}">
+							</div>
 							<div id="H3_4" tabindex="-1" class="div-table-col radio-group"
-								data-bind="ntsRadioButton: {checked: codeEditing, option: $parent.codeEditingItem()[1], name: '#[CMF001_276]', optionValue: 'code', enable: $parent.inputMode, optionText: 'name', group: 'fixedLengCls' }"></div>
+								data-bind="ntsRadioButton: {
+									checked: codeEditing, 
+									option: $parent.codeEditingItem()[1], 
+									name:'#{i18n.getText('CMF001_276')}',
+									optionValue: 'code',
+									enable: $parent.inputMode, 
+									optionText: 'name', 
+									group: 'fixedLengCls' 
+								}">
+							</div>
 						</div>
 						<div class="div-table-col">
 							<input id="H3_5" tabindex="5"
 								data-bind="ntsTextEditor: {
 								value: codeEditDigit,
+								name:'#{i18n.getText('CMF001_279')}',
 								option : {width : '30px'},
 								enable: !(codeEditing() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div id="H3_6" class=" label" style="display: inline">#{i18n.getText('CMF001_280')}</div>
@@ -101,7 +140,7 @@
 								data-bind="ntsRadioButton: {
 									checked: fixedValue, 
 									option: $parent.effectFixedValItem()[0], 
-									name: '#[CMF001_293]', 
+									name:'#{i18n.getText('CMF001_293')}',
 									optionValue: 'code', 
 									enable: $parent.inputMode, 
 									optionText: 'name', 
@@ -112,7 +151,7 @@
 								data-bind="ntsRadioButton: {
 									checked: fixedValue, 
 									option: $parent.effectFixedValItem()[1], 
-									name: '#[CMF001_293]', 
+									name:'#{i18n.getText('CMF001_293')}',
 									optionValue: 'code', 
 									enable: $parent.inputMode, 
 									optionText: 'name', 
@@ -124,6 +163,7 @@
 							<input id="H5_5" tabindex="9"
 								data-bind="ntsTextEditor: {
 								value: valueOfFixed,
+								name:'#{i18n.getText('CMF001_296')}',
 								option : {width : '200px'},
 								enable: !(fixedValue() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 						</div>
@@ -133,9 +173,9 @@
 
 			<div id="functions-area-bottom">
 				<button tabindex="10" id="btn_H6_1" class="x-large proceed "
-					data-bind="click: saveCharacterSetting">#{i18n.getText('CMF001_257')}</button>
+					data-bind="click: saveCharacterSetting">#{i18n.getText('CMF001_297')}</button>
 				<button tabindex="11" id="btn_H6_2" class="large"
-					data-bind="click: cancelCharacterSetting">#{i18n.getText('CMF001_268')}</button>
+					data-bind="click: cancelCharacterSetting">#{i18n.getText('CMF001_298')}</button>
 			</div>
 
 		</ui:define>
