CMF001F: Update code

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
@@ -58,7 +58,7 @@
 									data-bind="ntsGridList: {
 		                                            options: codeConvertList,
 		                                            optionsValue: selectedConvertCode,
-		                                            primaryKey: 'convertCd',
+		                                            primaryKey: 'dispConvertCode',
 		                                            columns: [
 																{headerText: '#{i18n.getText('CMF001_195')}', key: 'dispConvertCode', width: 80, formatter: _.escape},
 								                				{headerText: '#{i18n.getText('CMF001_196')}', key: 'dispConvertName', width: 250, formatter: _.escape}
