update primitive value

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
@@ -9,6 +9,12 @@
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
 			<script>var dialogSize = { width: 650, height: 500 };</script>
+			<com:ValidatorScript>
+                    nts.uk.ctx.exio.dom.exi.dataformat.StartDigit
+                    nts.uk.ctx.exio.dom.exi.dataformat.EndDigit
+                    nts.uk.ctx.exio.dom.exi.dataformat.DecimalDigitNumber
+                    nts.uk.ctx.exio.dom.exi.dataformat.ValueOfFixed
+            </com:ValidatorScript>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="../share/model.js" />
 			<com:scriptfile path="cmf001.g.vm.js" />
@@ -53,6 +59,7 @@
 								data-bind="ntsNumberEditor: {
 								value: startDigit,
 								name:'#{i18n.getText('CMF001_225')}',
+								constraint: 'StartDigit',
 								option : {width : '30px'},
 								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div id="G2_6" class="label" style="display: inline">#{i18n.getText('CMF001_226')}</div>
@@ -62,6 +69,7 @@
 								data-bind="ntsNumberEditor: {
 								value: endDigit,
 								name:'#{i18n.getText('CMF001_228')}',
+								constraint: 'EndDigit',
 								option : {width : '30px'},
 								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div id="G2_9" class=" label" style="display: inline">#{i18n.getText('CMF001_229')}</div>
@@ -102,6 +110,7 @@
 								data-bind="ntsNumberEditor: {
 								value: decimalDigitNumber,
 								name:'#{i18n.getText('CMF001_235')}',
+								constraint: 'DecimalDigitNumer',
 								enable: !(decimalDivision() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode),
 								option : {width : '30px'}}" />
 							<div style="margin-top: 5px;">
@@ -181,6 +190,7 @@
 								data-bind="ntsTextEditor: {
 								value: valueOfFixed,
 								name: '#{i18n.getText('CMF001_256')}', 
+								constraint: 'ValueOfFixed',
 								enable: !(fixedValue() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode),
 								option : {width : '200px'}}" />
 						</div>
