--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
@@ -63,6 +63,7 @@
 								option : {width : '30px'},
 								enable: !(effectiveDigitLength() == nts.uk.com.view.cmf001.share.model.NOT_USE_ATR.NOT_USE || !$parent.inputMode)}" />
 							<div id="G2_6" class="label" style="display: inline">#{i18n.getText('CMF001_226')}</div>
+							<div id="G2_7" class="label" style="display: inline">#{i18n.getText('CMF001_227')}</div>
 						</div>
 						<div class="div-table-col">
 							<input id="G2_8" tabindex="3"
