[CCG001] fix tabIndex

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -43,7 +43,7 @@
 						<div data-bind="ntsCheckBox:{checked: isSelectAllEmployee}">Show EmployeeList (検索タイプ)</div><br/>
 						<div style="display: flex; padding: 5px;">
 							<div data-bind="ntsFormLabel: {}">SystemType (システム区分):</div>
-							<div tabindex="2" data-bind="ntsComboBox: {
+							<div data-bind="ntsComboBox: {
 										name: '#[CCG001_28]',
 										options: systemTypes,
 										optionsValue: 'value',
