--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/f/index.xhtml
@@ -9,7 +9,7 @@
 		<ui:define name="htmlHead">
 			<script>
 				var dialogSize = {
-					width : 1050,
+					width : 1070,
 					height : 610
 				};
 			</script>
@@ -40,9 +40,9 @@
 			<div id="contents-area" class="fixed-flex-layout">
 				<div id="content-left" class="fixed-flex-layout-left bg-green">
 					<div
-						data-bind="ntsPanel:{width: '350px', height: '400px', direction: 'right', showIcon: true, visible: true}">
+						data-bind="ntsPanel:{width: '420px', height: '400px', direction: 'right', visible: true}">
 						<div class="flex">
-							<div style="width: 422px"
+							<div
 								data-bind="ntsSearchBox: {
 												searchMode: 'filter',
 												label: '#{i18n.getText('CMF001_194')}',
