--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/c/index.xhtml
@@ -195,9 +195,9 @@
 							<td style="min-width: 364px;"><label class="content-label">#{i18n.getText('KMF001_139')}</label></td>
 							<td><div tabindex="11" id="combo-box"
 									data-bind="ntsComboBox: {
-										options: maxDayReferenceList,
+										options: roundProcessClassificationList,
 										optionsValue: 'value',
-										value: selectedMaxNumberSemiVacation,
+										value: selectedRoundProcessCla,
 										optionsText: 'localizedName',
 										editable: false,
 										enable: enableAnnualVacation,
