--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/006/b/index.xhtml
@@ -91,7 +91,7 @@
 
 							<div class="line_col_2">
 								<input id="itemName"
-									data-bind="ntsTextEditor: {value: itemNameText, constraint:'ItemName'}" />
+									data-bind="ntsTextEditor: {value: itemNameText, constraint:'ItemName', required:true}" />
 							</div>
 
 							<com:ko-if bind="currentItem().systemRequired === 0">
