--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/i/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/i/index.xhtml
@@ -28,7 +28,7 @@
 							<div class="label" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_301')}</div>
 						</td>
 						<td>
-							<div data-bind="foreach: itemsFormat">
+							<div data-bind="foreach: itemsFormatSelection">
 								<div
 									data-bind="ntsRadioButton: {
 										checked: $parent.setting().formatSelection, 
