--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/d.xhtml
@@ -66,7 +66,7 @@
 				<div  class="ntsControl">
 					<label class="ntsRadioBox">
 						<span tabindex="8">
-							<input  type="radio" name="textRadio" data-bind="checkedValue: 1, checked: selectedValueD13, enable: true" />
+							<input  type="radio" name="textRadioD13" data-bind="checkedValue: 1, checked: selectedValueD13, enable: true" />
 							<span class="box"></span>
 							<span class="label">#{i18n.getText('KAF022_75')}</span>
 						</span>
@@ -82,7 +82,7 @@
 					</label>
 					<div>
 						<label class="ntsRadioBox" tabindex="8">
-							<input type="radio" name="textRadio" data-bind="checkedValue: 2, checked: selectedValueD13, enable: true" />
+							<input type="radio" name="textRadioD13" data-bind="checkedValue: 2, checked: selectedValueD13, enable: true" />
 							<span class="box"></span>
 							<span class="label">#{i18n.getText('KAF022_82')}</span>
 						</label>
