--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/d/index.xhtml
@@ -23,11 +23,16 @@
 				<tr>
 					<td><a tabindex="3" class="hyperlink hyperlink-disable"
 						href="#D-01">#{i18n.getText('KSM011_82')}</a></td>
-					<td><a tabindex="4" class="hyperlink" href="#D-02" style="margin-left: 25px;">#{i18n.getText('KSM011_83')}</a></td>
-					<td><a tabindex="5" class="hyperlink" href="#D-03" style="margin-left: 25px;">#{i18n.getText('KSM011_84')}</a></td>
-					<td><a tabindex="6" class="hyperlink" href="#D-04" style="margin-left: 25px;">#{i18n.getText('KSM011_85')}</a></td>
-					<td><a tabindex="7" class="hyperlink" href="#D-05" style="margin-left: 25px;">#{i18n.getText('KSM011_86')}</a></td>
-					<td><a tabindex="8" class="hyperlink" href="#D-06" style="margin-left: 25px;">#{i18n.getText('KSM011_87')}</a></td>
+					<td><a tabindex="4" class="hyperlink" href="#D-02"
+						style="margin-left: 25px;">#{i18n.getText('KSM011_83')}</a></td>
+					<td><a tabindex="5" class="hyperlink" href="#D-03"
+						style="margin-left: 25px;">#{i18n.getText('KSM011_84')}</a></td>
+					<td><a tabindex="6" class="hyperlink" href="#D-04"
+						style="margin-left: 25px;">#{i18n.getText('KSM011_85')}</a></td>
+					<td><a tabindex="7" class="hyperlink" href="#D-05"
+						style="margin-left: 25px;">#{i18n.getText('KSM011_86')}</a></td>
+					<td><a tabindex="8" class="hyperlink" href="#D-06"
+						style="margin-left: 25px;">#{i18n.getText('KSM011_87')}</a></td>
 				</tr>
 			</table>
 
@@ -83,7 +88,7 @@
 												value: useCls,
 												enable: true }"></div>
 					</div>
-					<div class="combo" style = "margin-top: 20px;">
+					<div class="combo" style="margin-top: 20px;">
 						<span data-bind="enable: useCls() ==0">#{i18n.getText('KSM011_89')}</span>
 					</div>
 					<div class="combo-d">
@@ -96,10 +101,11 @@
 												optionsText: 'name',
 												required: true,
 												enable: useCls() ==0,
-												editable: false
+												editable: false,
+												dropDownAttachedToBody: true
 												}" />
 					</div>
-					<div class = "combo1" style = "margin-top: -28px; margin-left: 322px;">
+					<div class="combo1" style="margin-top: -28px; margin-left: 322px;">
 						<span data-bind="enable: useCls() ==0">#{i18n.getText('KSM011_91')}</span>
 					</div>
 				</div>
