--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/c/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/001/c/index.xhtml
@@ -197,6 +197,7 @@
 									data-bind="ntsComboBox: {
 										options: roundProcessClassificationList,
 										optionsValue: 'value',
+										visibleItemsCount: 2,
 										value: selectedRoundProcessCla,
 										optionsText: 'localizedName',
 										editable: false,
