--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
@@ -65,7 +65,7 @@
 				
 				<com:ko-if bind="currentTab()=='D'">
 					<button class="proceed" data-bind="click: $parent.viewmodelD.registration.bind($parent.viewmodelD)">#{i18n.getText('KSM011_6')}</button>
-					<button data-bind="click: $parent.viewmodelD.registration.bind($parent.viewmodelD)">#{i18n.getText('KSM011_81')}</button>
+					<button>#{i18n.getText('KSM011_81')}</button>
 				</com:ko-if>
 			</div>
 			
