[CMM011] & [CMM013] Fix Fixed-Flex Layout

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011/a/index.xhtml
@@ -43,8 +43,8 @@
 					style="margin-left: 200px;">#{i18n.getText('CMM011_7')}</button>
 				<!-- END A1_1 ~ A1_3 -->
 			</div>
-			<div id="contents-area">
-				<div id="left-content">
+			<div id="contents-area" class="fixed-flex-layout">
+				<div class="fixed-flex-layout-left">
 
 					<!-- BEGIN A2_1 ~ A2_6 -->
 					<div id="left-content-top"
@@ -98,8 +98,8 @@
 					<!-- END A3_1 ~ A4_4 -->
 				</div>
 
-				<!-- BEGIN A5_1 ~ A_10_2 -->
-				<div id="right-content">
+				<div class="fixed-flex-layout-right">
+					<!-- BEGIN A5_1 ~ A_10_2 -->
 					<table id="table-detail-setting">
 						<col width="150"></col>
 						<col width="260"></col>
@@ -248,8 +248,8 @@
 						</tr>
 						<!-- END A10_1 ~ A10_2 -->
 					</table>
+					<!-- END A5_1 ~ A_10_2 -->
 				</div>
-				<!-- END A5_1 ~ A_10_2 -->
 			</div>
 		</ui:define>
 	</ui:composition>
