--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/013/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/013/a/index.xhtml
@@ -38,13 +38,11 @@
 					class="btnStyle">#{i18n.getText('CMM013_4')}</button>
 			</div>
 
-			<div id="contents-area">
-				<div id="left-content">
+			<div id="contents-area" class="fixed-flex-layout">
+				<div class="fixed-flex-layout-left">
 					<div id="job-title-items-list"></div>
 				</div>
-
-				<div id="right-content">
-
+				<div class="fixed-flex-layout-right">
 					<table class="table_content">
 						<colgroup>
 							<col width="150px" />
@@ -158,10 +156,7 @@
 							</td>
 							<td></td>
 						</tr>
-
 					</table>
-
-
 				</div>
 			</div>
 
