kaf022-M: update name text-area.

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
@@ -75,7 +75,7 @@
 						enable: true}"></div>
 					</td>
 					<td>
-						<textarea style="height: 220px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 220px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}'}" />
 					</td>
 				</tr>
 				<!-- AppType: 休暇申請    -->
@@ -92,7 +92,7 @@
 					<td></td>
 					<td></td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}' }" />
 					</td>
 				</tr>
 				<!-- AppType: 勤務変更申請    -->
@@ -109,7 +109,7 @@
 					<td></td>
 					<td></td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}' }" />
 					</td>
 				</tr>
 				<!-- AppType: 出張申請 -->
@@ -126,7 +126,7 @@
 					<td></td>
 					<td></td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}' }" />
 					</td>
 				</tr>
 				<!-- AppType: 直行直帰申請　 -->
@@ -143,7 +143,7 @@
 					<td></td>
 					<td></td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}' }" />
 					</td>
 				</tr>
 				<!-- AppType: 休出時間申請 -->
@@ -190,7 +190,7 @@
 						enable: true}"></div>
 					</td>
 					<td>
-						<textarea style="height: 220px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 220px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}' }" />
 					</td>
 				</tr>
 				<!-- AppType: 時間年休申請 -->
@@ -214,7 +214,7 @@
 							enable: true}"></div>
 					</td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' , name:'#{i18n.getText('KAF022_315')}'}" />
 					</td>
 				</tr>
 				<!-- AppType: 遅刻早退取消申請 -->
@@ -244,7 +244,7 @@
 							enable: true}"></div><br/>
 					</td>
 					<td>
-						<textarea style="height: 80px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 80px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' , name:'#{i18n.getText('KAF022_315')}'}" />
 					</td>
 				</tr>
 				<!-- AppType: 打刻申請 -->
@@ -261,7 +261,7 @@
 					<td></td>
 					<td></td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea class = 'hhhhhhhhhh' style="height: 40px; width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}'" />
 					</td>
 				</tr>
 				<!-- AppType: 振休振出申請 -->
@@ -278,7 +278,7 @@
 					<td></td>
 					<td></td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}' }" />
 					</td>
 				</tr>
 				<!-- AppType: ３６協定時間申請 -->
@@ -295,7 +295,7 @@
 					<td></td>
 					<td></td>
 					<td>
-						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo' }" />
+						<textarea style="height: 40px;width: 174px" data-bind="ntsMultilineEditor: { value: $data.memo, constraint: 'Memo', name:'#{i18n.getText('KAF022_315')}' }" />
 					</td>
 				</tr>
 			</tbody>
